--- a/vignettes/scFM.Rmd
+++ b/vignettes/scFM.Rmd
@@ -9,45 +9,63 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-```{r, include = FALSE}
+```{r setup, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>"
+  comment = "#>",
+  cache = FALSE
 )
 ```
 
 
 # Introduction
-The `scFM` package implements the Segmented Gaussian Copula Factor
 
-# 'scFM' for Example Data
+The 'scFM' package implements the Segmented Gaussian Copula Factor Model (scFM), a Bayesian latent factor model designed for single-cell RNA sequencing (scRNA-seq) data, as introduced by Choi et al. (2024). As described in the paper, "The proposed segmented Gaussian copula factor model (scFM) handles both zero-inflated and skewed counts in scRNA-seq data by introducing a segmentation of the empirical marginal distribution" (Section 1, Choi et al., 2024).
 
-```{r, message = FALSE, eval = TRUE, echo = TRUE, cache = TRUE}
-# load necessary packages
+# Data Preparation
+
+This vignette uses the scFM package, which provides the core functionality for the Segmented Gaussian Copula Factor Model and includes the built-in dataset used in this analysis. The paper describes the dataset: "We use the GM12878 cell line (LCL) dataset, which consists of 5,135 cells and 100 genes after preprocessing" (Section 5, Choi et al., 2024).
+
+```{r load-data, message = FALSE, eval = TRUE, echo = TRUE, cache = TRUE}
+# Load the scFM package, which provides the core functionality and built-in dataset
 library(scFM)
+set.seed(7)
+# Load the built-in LCL dataset
+data(LCL)
+x = LCL
+# Check dimensions of the dataset
+dim(x)
+```
+
+# Model Initialization and Prior Setup
+
+```{r load-packages, message = FALSE, eval = TRUE, echo = TRUE, cache = TRUE}
+# load necessary packages
 library(tmvnsim)
 library(tmvtnorm)
 library(GIGrvg)
 library(actuar)
 library(ggplot2)
+library(SingleR)
+library(celldex)
+library(tibble)
 ```
 
-```{r, message = FALSE, eval = TRUE, echo = TRUE, cache = TRUE}
-# load data
-set.seed(7)
-data(LCL)
-x = LCL
-dim(x)
-```
+## Hyperparameter Settings
 
-```{r, message = FALSE, eval = TRUE, echo = TRUE, cache = TRUE}
+```{r set-priors, message = FALSE, eval = TRUE, echo = TRUE, cache = TRUE}
 # set hyperparameters
 priors = list()
 priors$Sigma = c(0.1, 0.1)
 priors$Phi   = 0.5
 ```
 
-```{r, message = FALSE, eval = TRUE, echo = TRUE, cache = TRUE}
+
+## Empirical Marginal Transformation
+
+We transform the marginal distributions of observed counts to approximate standard normals using empirical CDFs
+
+```{r init-Z-delta, message = FALSE, eval = TRUE, echo = TRUE, cache = TRUE}
 # initialize parameters Z, delta
 starting = list()
 n = nrow(x)
@@ -63,14 +81,24 @@ starting$delta[ , 1] = qnorm(colMeans(x == 0))
 starting$delta[ , 2] = qnorm(colMeans(x <= 1))
 ```
 
-```{r, message = FALSE, eval = TRUE, echo = TRUE, cache = TRUE}
+
+## Initial Factor Estimates via Factor Analysis
+
+We initialize the loadings and scores using standard factor analysis on the latent Z.
+
+```{r init-Lambda-U, message = FALSE, eval = TRUE, echo = TRUE, cache = TRUE}
 # initialize Lambda and U from factor analysis
 out0 = factanal(starting$Z, factors = k, scores = "regression")
 starting$Lambda = as.matrix(out0$loadings)
 starting$U = out0$scores
 ```
 
-```{r, message = FALSE, eval = TRUE, echo = TRUE, cache = TRUE}
+
+## Sampling Prior Hyperparameters
+
+We sample the column-wise global parameter $\phi$, local parameter $\psi$, and overall shrinkage $\tau$ using their full conditionals.
+
+```{r sampling-hyperparamters, message = FALSE, eval = TRUE, echo = TRUE, cache = TRUE}
 # Sampling Hyperparameters for Initialization
 Sigma = diag(1, p)
 Phi = rep(1 / k, k)
@@ -97,24 +125,37 @@ starting$tau   = tau
 starting$Psi   = Psi
 ```
 
-```{r, message = FALSE, eval = TRUE, echo = TRUE, cache = TRUE}
-# Load necessary libraries
-library(ggplot2)
-library(SingleR)
-library(celldex)
-library(tibble)
+# Posterior Inference
 
-# Load precomputed results
+## Gibbs Sampling
+
+We implement a blocked Gibbs sampler for the scFM model to obtain posterior draws from the parameters
+
+```{r scFM, message = FALSE, eval = TRUE, echo = TRUE, cache = TRUE}
+#nmcmc   = 100
+#nburnin = 50
+#p.time = proc.time()
+#out    = gibbs_scFM(x, k, starting, priors, nmcmc = nmcmc, nburnin = nburnin)
+#proc.time() - p.time
+
 load("/Users/admin/Desktop/scFM_scRNAseq.RData")  # loads 'x', 'anno', 'out'
 ```
 
-```{r, message = FALSE, eval = TRUE, echo = TRUE, cache = TRUE}
+
+We compute posterior means of the factor loadings and scores by averaging over MCMC samples.
+
+```{r posterior-means, message = FALSE, eval = TRUE, echo = TRUE, cache = TRUE}
 # Compute posterior means
 loading_est = apply(out$Lambda, c(1, 2), mean) 
 score_est = apply(out$U, c(1, 2), mean) 
 ```
 
-```{r, message = FALSE, eval = TRUE, echo = TRUE, cache = TRUE}
+
+## Latent Factor Selection
+
+To identify significant latent factors, we perform k-means clustering on the columns of Lambda.
+
+```{r identify-significant-factors, message = FALSE, eval = TRUE, echo = TRUE, cache = TRUE}
 # Identify significant factors using k-means clustering
 sig_facto = matrix(0, dim(out$Lambda)[2], dim(out$Lambda)[3])
 for (i in 1 : dim(out$Lambda)[3])
@@ -129,11 +170,17 @@ score_est_all = score_est
 score_est = score_est[ , 1 : 2]
 ```
 
-```{r, message = FALSE, eval = TRUE, echo = TRUE, cache = TRUE}
+# Downstream analysis
+
+We use the estimated factor scores to cluster cells and visualize latent structure.
+
+## Clustering and Visualization
+
+```{r scree-plot, message = FALSE, eval = TRUE, echo = TRUE, cache = TRUE}
 # Scree plot to determine number of clusters
 n_clusters = 10
 wss = numeric(n_clusters)
-for (i in 1 : n_clusters) 
+for (i in 1 : n_clusters)
 {
    # fit the model: km.out
    km.out = kmeans(score_est, centers = i, nstart = 100, iter.max = 10000)
@@ -151,7 +198,9 @@ scree_plot = ggplot(wss_df, aes(x = clusters, y = wss, group = 1)) +
 scree_plot
 ```
 
-```{r, message = FALSE, eval = TRUE, echo = TRUE, cache = TRUE}
+We visualize the clustering results on the first two significant factors identified by our shrinkage prior.
+
+```{r clustering, message = FALSE, eval = TRUE, echo = TRUE, cache = TRUE}
 # Apply k-means clustering with chosen k = 3
 out_cell_types = kmeans(score_est, centers = 3, nstart = 100, iter.max = 10000)
 df = data.frame(facto1 = score_est[ , 1], facto2 = score_est[ , 2], Cluster = factor(out_cell_types$cluster))
@@ -159,7 +208,9 @@ plot_cell_types = ggplot(df[-4148, ], aes(facto1, facto2, color = Cluster)) + ge
 plot_cell_types
 ```
 
-```{r, message = FALSE, eval = TRUE, echo = TRUE, cache = TRUE}
+## Top Genes by Factors
+
+```{r top-10, message = FALSE, eval = TRUE, echo = TRUE, cache = TRUE}
 # Plot top 10 genes by loadings on each factor
 rownames(loading_est) = colnames(x)
 
@@ -190,12 +241,12 @@ round(colMeans(x[out_cell_types$cluster == 3, rank(abs(loading_est[ , 2])) > 90]
 
 ```
 
-```{r, message = FALSE, eval = TRUE, echo = TRUE, cache = TRUE}
+## Cluster Annotation
+
+```{r annotate, message = FALSE, eval = TRUE, echo = TRUE, cache = TRUE}
 # Annotate clusters using SingleR
 hpca.se = HumanPrimaryCellAtlasData()
 hpca.se
-annotate_clusters = SingleR(test = t(x), ref = hpca.se, clusters = out_cell_types$cluster, labels = hpca.se$label.main)
-annotate_clusters
 annotate_clusters = SingleR(test = t(x), ref = hpca.se, clusters = out_cell_types$cluster, labels = hpca.se$label.main)
 annotate_clusters
 ```
