--- a/README.Rmd
+++ b/README.Rmd
@@ -51,7 +51,7 @@ m = 1
 k_max = 8
 priors = list()
 priors$Sigma = c(0.1, 0.1)
-priors$Phi   = 0.5
+priors$phi   = 0.5
 
 #################### initialize parameters ####################
 # initialize Z using the scaled empirical CDF of each variable
@@ -77,10 +77,9 @@ starting$U = out0$scores
 # initialize the remaining parameters by sampling from their full conditional distributions, 
 # given the initialized values of Z, delta, Lambda, and U.
 Sigma = diag(1, p)
-Phi = rep(1 / k_max, k_max)
+phi = rep(1 / k_max, k_max)
 tau = 1
-Psi = matrix(rexp(p * k_max, rate = 0.5), p, k_max)
-
+Xi = matrix(rexp(p * k_max, rate = 0.5), p, k_max)
 for (iter in 1 : 1000) 
 {
     Sigma[diag(rep(TRUE, p))] = 1 / rgamma(p, shape = priors$Sigma[1] + rep(n / 2, p), 
@@ -90,21 +89,21 @@ for (iter in 1 : 1000)
     H = rep(NA, k_max)
     for (l in 1 : k_max) 
     {
-        H[l] = rgig(1, lambda = priors$Phi - p, chi = 2 * sum(abs(starting$Lambda[ , l])), psi = 1)
+        H[l] = rgig(1, lambda = priors$phi - p, chi = 2 * sum(abs(starting$Lambda[ , l])), psi = 1)
     }
   
-    Phi = H / sum(H)
+    phi = H / sum(H)
   
-    tau = rgig(1, lambda = k_max * (priors$Phi - p), chi = 2 * sum(t(abs(starting$Lambda)) / Phi), psi = 1)
+    tau = rgig(1, lambda = k_max * (priors$phi - p), chi = 2 * sum(t(abs(starting$Lambda)) / phi), psi = 1)
   
-    Psi_tilde = rinvgauss(p * k_max, mean = c(t(Phi * t(tau / abs(starting$Lambda)))))
-    Psi = matrix(1 / Psi_tilde, p, k_max)
+    Xi_tilde = rinvgauss(p * k_max, mean = c(t(phi * t(tau / abs(starting$Lambda)))))
+    Xi = matrix(1 / Xi_tilde, p, k_max)
 }
 
 starting$Sigma = Sigma
-starting$Phi   = Phi
+starting$phi   = phi
 starting$tau   = tau
-starting$Psi   = Psi
+starting$Xi    = Xi
 
 #################### run our proposed data-augmented Gibbs sampler for scFM ####################
 nmcmc   = 10000
@@ -165,4 +164,3 @@ df = data.frame(gene = factor(colnames(x), levels = colnames(x)[order2]), value 
 loading2 = ggplot(df, aes(x = gene, y = value)) + geom_bar(stat = "identity") + 
   scale_x_discrete(guide = guide_axis(n.dodge = 5)) + labs(x = "Genes", y = "Absolute loadings on factor 2")
 loading2
-
